--- a/package.json
+++ b/package.json
@@ -12,35 +12,37 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@types/js-cookie": "^3.0.3",
+    "axios": "^1.5.0",
+    "bcryptjs": "^2.4.3",
     "clsx": "^2.1.1",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^6.10.0",
+    "helmet": "^7.0.0",
+    "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.574.0",
+    "mongoose": "^7.5.0",
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "tailwind-merge": "^3.4.1",
-    "express": "^4.18.2",
-    "mongoose": "^7.5.0",
-    "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
-    "cors": "^2.8.5",
-    "express-rate-limit": "^6.10.0",
-    "helmet": "^7.0.0",
-    "validator": "^13.11.0",
-    "express-mongo-sanitize": "^2.2.0",
-    "axios": "^1.5.0",
-    "js-cookie": "^3.0.5",
-    "@types/js-cookie": "^3.0.3"
+    "validator": "^13.11.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "concurrently": "^8.2.1",
     "eslint": "^9",
     "eslint-config-next": "16.1.6",
-    "tailwindcss": "^4",
-    "typescript": "^5",
     "nodemon": "^3.0.1",
-    "concurrently": "^8.2.1"
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
