--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@neondatabase/serverless": "^1.0.2",
     "@types/js-cookie": "^3.0.3",
     "axios": "^1.5.0",
     "bcryptjs": "^2.4.3",
